@@ -6,7 +6,8 @@ Changes after 1.2.3:
 -----------------------------
 
 Bug fixes:
- 
+
+ 2006/07/07 Fix a crash on shutdown occurring in ProgressManager (#130377) -fo
  2006/06/25 Fix context menus in browser tab, show appriopriate entries when
             text is selected (copy action) or the cursor is over a link 
             (#121957) -fo
